管理员列表出来，条件查询还没做。修改了数据库字段

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
 					</a>
 						<dl class="layui-nav-child" th:each="son:${menu.sonList}">
 							<dd class="">
-								<a th:href="${son.resUrl}"> <cite th:text="${son.name}">问题列表</cite>
+								<a href="javascript:;" th:src="@{${son.resUrl}}"> <cite th:text="${son.name}"></cite>
 								</a>
 							</dd>
 						</dl>
