--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -62,7 +62,7 @@
 	<script th:src="@{/js/jquery-1.10.1.min.js}" charset="utf-8">
 		
 	</script>
-	<script th:src="@{/lib/layer/layer.js}" charset="utf-8">
+	<script th:src="@{/js/layer.js}" charset="utf-8">
 		
 	</script>
 
