资源列表，数据库修改。

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 								<a href="">切换帐号</a>
 							</dd>
 							<dd>
-								<a href="./login.html">退出</a>
+								<a th:href="@{/logout}">退出</a>
 							</dd>
 						</dl></li>
 					<!-- <li class="layui-nav-item">
