--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 								<a href="">个人信息</a>
 							</dd>
 							<dd>
-								<a href="">切换帐号</a>
+								<a th:href="@{/logout}">切换帐号</a>
 							</dd>
 							<dd>
 								<a th:href="@{/logout}">退出</a>
