--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -17,11 +17,12 @@
             <blockquote class="layui-elem-quote">
                 欢迎使用Augus后台系统！
             </blockquote>
-            <p>登录次数：18 </p>
-            <p>上次登录IP：222.35.131.79.1  上次登录时间： 2017-01-01 11:19:55</p>
+            <p>登录次数：6666 </p>
+            <p>上次登录IP：127.0.0.1  上次登录时间： 2018-03-28 11:19:55</p>
             <fieldset class="layui-elem-field layui-field-title site-title">
               <legend><a name="default">信息统计</a></legend>
             </fieldset>
+           <!-- 
             <table class="layui-table">
                 <thead>
                     <tr>
@@ -75,26 +76,27 @@
                         <td>0</td>
                     </tr>
                 </tbody>
-            </table>
+            </table> -->
             <table class="layui-table">
                 <thead>
                     <tr>
-                        <th colspan="2" scope="col">服务器信息</th>
+                        <th colspan="2" scope="col">项目信息</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th width="30%">服务器计算机名</th>
-                        <td><span id="lbServerName">http://127.0.0.1/</span></td>
+                        <th width="30%">GITHUB</th>
+                        <td><span id="lbServerName">https://github.com/bupisheng/springboot</span></td>
                     </tr>
                     <tr>
-                        <td>服务器IP地址</td>
-                        <td>192.168.1.1</td>
+                        <th>CSDN</th>
+                        <td>https://blog.csdn.net/KOBE_BPS</td>
                     </tr>
                     <tr>
-                        <td>服务器域名</td>
-                        <td>x.xuebingsi.com</td>
+                        <th>开源中国</th>
+                        <td>https://my.oschina.net/u/3456926/blog</td>
                     </tr>
+                    <!-- 
                     <tr>
                         <td>服务器端口 </td>
                         <td>80</td>
@@ -174,7 +176,7 @@
                     <tr>
                         <td>当前系统用户名 </td>
                         <td>NETWORK SERVICE</td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
