--- a/src/main/resources/templates/resource/resource_list.html
+++ b/src/main/resources/templates/resource/resource_list.html
@@ -31,7 +31,7 @@
 			<div class="layui-form-pane" style="margin-top: 15px;">
 				<div class="layui-form-item">
 					<div class="layui-input-inline">
-						<select name="parentId" lay-verify="isNull">
+						<select name="parentId" lay-verify="required">
 							<option value="">请选择父级菜单</option>
 							<option value="0">无</option>
 							<option th:each="parent:${parents}" th:value="${parent.id}"
@@ -40,14 +40,14 @@
 					</div>
 					<div class="layui-input-inline">
 						<input type="text" name="resUrl" placeholder="资源路径"
-							autocomplete="off" class="layui-input" lay-verify="isNull" />
+							autocomplete="off" class="layui-input" lay-verify="required" />
 					</div>
 					<div class="layui-input-inline">
 						<input type="text" name="name" placeholder="资源名称"
-							autocomplete="off" class="layui-input" lay-verify="isNull" />
+							autocomplete="off" class="layui-input" lay-verify="required" />
 					</div>
 					<div class="layui-input-inline">
-						<select name="type" lay-verify="isNull">
+						<select name="type" lay-verify="required">
 							<option value="">请选择类型</option>
 							<option value="1">菜单</option>
 							<option value="2">按钮</option>
@@ -55,7 +55,7 @@
 					</div>
 					<div class="layui-input-inline">
 						<input type="text" name="sort" placeholder="排序"
-							autocomplete="off" class="layui-input" lay-verify="isNull" />
+							autocomplete="off" class="layui-input" lay-verify="required" />
 					</div>
 					<div class="layui-input-inline" style="width: 80px">
 						<button class="layui-btn" lay-submit="" lay-filter="add">
@@ -96,7 +96,7 @@
 						th:text="${resource.parentName == null ?'无':resource.parentName}"></td>
 					<td class="td-manage"><input type="hidden"
 						th:value="${resource.id}" /> <a title="编辑" href="javascript:;"
-						onclick="rule_edit('编辑',this,'600','510')" class="ml-5"
+						onclick="rule_edit('编辑',this,'455','410')" class="ml-5"
 						style="text-decoration: none"> <i class="layui-icon">&#xe642;</i>
 					</a> <a title="删除" href="javascript:;" onclick="rule_del(this)"
 						style="text-decoration: none"> <i class="layui-icon">&#xe640;</i>
@@ -207,11 +207,11 @@
              }
 
             //-编辑
-            /**
+            
             function rule_edit (title,obj,w,h) {
             	var id = $(obj).siblings("input[type='hidden']").val();
-                x_admin_show(title,[[@/back/resource/toEdit?id=]]+id,w,h); 
-            }**/
+                x_admin_show(title,[[@{/back/resource/toEdit?id=}]]+id,w,h); 
+            }
             
             /*删除*/
             function rule_del(obj){
