--- a/src/main/resources/templates/admin/admin_list.html
+++ b/src/main/resources/templates/admin/admin_list.html
@@ -47,10 +47,10 @@
 			</div>
 		</form>
 		<xblock>
-		<button class="layui-btn layui-btn-danger" onclick="delAll()">
+		<button class="layui-btn layui-btn-danger" onclick="delAll()" shiro:hasPermission="admin:delete">
 			<i class="layui-icon">&#xe640;</i>批量删除
 		</button>
-		<button class="layui-btn" onclick="admin_add('添加用户','','600','500')">
+		<button class="layui-btn" onclick="admin_add('添加用户','','600','500')" shiro:hasPermission="admin:add">
 			<i class="layui-icon">&#xe608;</i>添加
 		</button>
 		<span class="x-right" style="line-height: 40px">共有数据：<span
